# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  init_db.sh  spec.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230517090131_make_status_not_null_in_subscriptions.sql  20230705173107_create_idempotency_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: admin_password.rs  mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: mod.rs  persistence.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/logout/: get.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  password.html  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  logout.rs  main.rs  newsletter.rs  password.rs  subscriptions.rs  subscriptions_confirm.rs
