[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
tokio = { version= "1.28.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"]}
config = "0.13"
#uuid = {version = "0.8.1", features = ["v4"]}
chrono = "0.4.24"


[dependencies.sqlx]
version = "0.6"
dufault-featu2s = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
]

[dev-dependencies]
reqwest = "0.11"
