[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
tracing-actix-web = "0.7"
tokio = { version= "1.28.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"]}
config = "0.13"
chrono = "0.4.24"
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"]}
serde-aux = "4"
unicode-segmentation = "1"
validator = "0.16"
reqwest = { version = "0.11", default_features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.5", features = ["std"] }
serde_json = "1"

[dependencies.actix-session]
version = "0.7"
features = ["redis-rs-tls-session"]

[dependencies.sqlx]
version = "0.6"
dufault-featu2s = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "serde",
]

[dev-dependencies]
once_cell = "1"
claims = "0.7"
proptest = "1.1"
proptest-derive = "0.3"
tokio = { version = "1", features = ["rt", "macros"]}
wiremock = "0.5"
fake = "2.6"
serde_json = "1"
linkify = "0.9"
